smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/annotation-unclosed-list3.smithy
// Parse error at line 4, column 8 near `MyString`: Expected one of [RBRACKET(]), COMMA(,)]
namespace com.foo
@tags([
string MyString
